fix: adjusting paragon course partner logo card to not stretch/compress (#376)

--- a/src/index.scss
+++ b/src/index.scss
@@ -33,3 +33,8 @@
 .program.badge {
   font-family: $font-family-monospace;
 }
+
+.course-card .pgn__card-logo-cap {
+  object-fit: scale-down;
+  object-position: center center;
+}
